@@ -259,6 +259,7 @@ jQuery.extend(bcdui.widget,
    * @param {string}        [args.widgetCaption]                  A caption which is used as prefix for navPath generation for this widget.
    * @param {boolean}       [args.enableNavPath]                  Set to true if widget should not be added to navpath handling.
    * @param {string}        [args.label]                          If provided, renders label element to this widget
+   * @param {boolean}       [args.isSwitch=false]                 If enabled, the radio buttons are rendered as a horizontal switch panel.
    */
   createSingleSelect: function(args)
     {
@@ -282,7 +283,8 @@ jQuery.extend(bcdui.widget,
           id:args.id,
           widgetCaption: args.widgetCaption,
           enableNavPath: args.enableNavPath,
-          label :args.label
+          label :args.label,
+          isSwitch: args.isSwitch
       };
       if (bcdui.util.isString(args.optionsModelXPath) && !!args.optionsModelXPath.trim()) {
         var optionsModelParams = bcdui.factory._extractXPathAndModelId(args.optionsModelXPath);
